2005-07-08  Andrew Lunn  <andrew.lunn@ascom.ch>

	* cdl/romfs.cdl: Allow mk_romfs to be build even when the tests
	are disabled. It is generally useful and other tests programs may
	want it.

2004-12-13  John Dallaway  <jld@ecoscentric.com>

	* tests/fileio1.c: Rename to romfs1.c. eCos test names should be
	unique.
	* cdl/romfs.cdl: Build the romfs1 test.

2004-10-04  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/romfs.c (romfs_mount): Avoid a compiler warning about punned
	types.

2004-08-08  Bart Veer  <bartv@ecoscentric.com>

	* cdl/romfs.cdl: generate both little-endian and big-endian image
	files.

	* tests/fileio1.c: include either a little-endian or a big-endian
	image. Totally fail the test early on if the file system cannot be
	mounted.

2004-06-14  John Dallaway  <jld@ecoscentric.com>

	* cdl/romfs.cdl: Specify the test executable file name for
	compatibility with the eCos Configuration Tool.

2004-02-20  Vincent Catros  <Vincent.Catros@elios-informatique.fr>

	* src/fs-ecos.c :
	(jffs2_find) Policy to skip path separator is no longer
	"if '/' then skip" but "while '/' then skip" allowing
	multi '/' separators (i.e : /tmp////foo).
	(find_entry) Policy to detect end of path is no longer
	"if '\0' then end_of_path"
	but "while '/' skip it and then if '\0' then end_of_path"
	allowing path terminated with any number of '/'
	(i.e : chdir(/tmp///)).

2003-12-11  Sandeep Kumar <sandeep@codito.com>

	* src/romfs.c (romfs_mount) : function wrongly returns ENOENT even
	if fste->data isn't NULL.

2003-09-25  Oyvind Harboe <oyvind.harboe@zylin.com>

	* src/romfs.c (romfs_mount): If a mount fails, make sure we leave
	all state information in such a way we can try again.

2003-07-10  Andrew Lunn  <andrew.lunn@ascom.ch>
        
	* support/mk_romfs.c: S_I[RWX]{USR|GRP|OTH} etc changed to match
	the changes in sys/stat.h

2003-02-24  Jonathan Larmour  <jifl@eCosCentric.com>

	* cdl/romfs.cdl: Fix doc link.

2003-01-30  Andrew Lunn  <andrew.lunn@ascom.ch>
